some code changed

--- a/application.yaml
+++ b/application.yaml
@@ -1,4 +1,7 @@
-spring.datasource.url: jdbc:mysql://localhost:3306/page
-spring.datasource.username: root
-spring.datasource.password: Alimnikas299
+spring :
+  datasource :
+      url: jdbc:mysql://localhost:3306/search_engine
+      username: root
+      password: Alimnikas299
+
 spring.jpa.hibernate.ddl-auto: none
